# pdi_code

./: CMakeLists.txt  README.md
app/: run.cpp
include/: ArithmeticOperations.hpp  GrayscaleConverter.hpp  Histogram.hpp  IsolateByChannel.hpp  Negative.hpp  Operation.hpp  Thresholding.hpp  grayscale.hpp  imageinfo.hpp
src/: ArithmeticOperations.cpp  GrayscaleConverter.cpp  Histogram.cpp  IsolateByChannel.cpp  Negative.cpp  Operation.cpp  Operations2.cpp  Thresholding.cpp  grayscale.cpp  imageinfo.cpp
